# rstdms

./: Cargo.toml  README.md
rstdms/: Cargo.toml
rstdms-python/: Cargo.toml  pyproject.toml
rstdms-python/rstdms/: __init__.py
rstdms-python/src/: lib.rs
rstdms/src/: error.rs  lib.rs  object_map.rs  object_path.rs  properties.rs  segment.rs  tdms_reader.rs  timestamp.rs
rstdms/tests/: tdms_read.rs
src/: error.rs  interleaved.rs  lib.rs  object_map.rs  object_path.rs  properties.rs  segment.rs  tdms_reader.rs  timestamp.rs  toc.rs  types.rs
tests/: tdms_read.rs
